Make the c eqdsk reader read the header comment in eqdsk files so people no longer have to delete the comment. This was a simple fix and I should have done it in the beginning. All eqdsk files in the repo have been modified accordingly by restoring their original header comment or putting a header comment indicating it was generated by us for eqdsk files we generated in python

--- a/gyrokinetic/data/eqdsk/README
+++ b/gyrokinetic/data/eqdsk/README
@@ -15,3 +15,4 @@ File descriptions:
 - wham.geqdsk: case with beams and ~0.8 T central field.
 - tcv.geqdsk:  TCV equilibrium from Oliveira and Body et. al., Nuclear Fusion, 2021. https://github.com/SPCData/TCV-X21/blob/main/1.experimental_data/reference_scenario/65402_t1.eqdsk
 - tcv_upper_SN.geqdsk: TCV upper single null equilibrium g162940.02944_670 from Gabriele Merlo and David Hatch
+- mast.geadsk: generated with the tutorial from freegs
